unreal-plugin/ThirdParty/AliceSDF/include/alice_sdf.h

/* ============================================================================
 * Types
 * ============================================================================ */

/**
 * @brief Opaque handle to an SDF node
 *
 * All SDF operations return handles that must be freed with alice_sdf_free().
 */
typedef void* SdfHandle;
/* ============================================================================
 * Boolean Operations
 * ============================================================================ */

/** @brief Union of two SDFs (A | B) */
SdfHandle alice_sdf_union(SdfHandle a, SdfHandle b);
/** @brief Intersection of two SDFs (A & B) */
SdfHandle alice_sdf_intersection(SdfHandle a, SdfHandle b);
/** @brief Subtraction of SDFs (A - B) */
SdfHandle alice_sdf_subtract(SdfHandle a, SdfHandle b);
/**
 * @brief Smooth union of two SDFs
 * @param k Smoothing factor (0 = sharp, higher = smoother)
 */
SdfHandle alice_sdf_smooth_union(SdfHandle a, SdfHandle b, float k);
/**
 * @brief Smooth intersection of two SDFs
 * @param k Smoothing factor
 */
SdfHandle alice_sdf_smooth_intersection(SdfHandle a, SdfHandle b, float k);
/**
 * @brief Smooth subtraction of SDFs
 * @param k Smoothing factor
 */
SdfHandle alice_sdf_smooth_subtract(SdfHandle a, SdfHandle b, float k);
/** Chamfer operations */
SdfHandle alice_sdf_chamfer_union(SdfHandle a, SdfHandle b, float radius);
SdfHandle alice_sdf_chamfer_intersection(SdfHandle a, SdfHandle b, float radius);
SdfHandle alice_sdf_chamfer_subtract(SdfHandle a, SdfHandle b, float radius);
/** Stairs (terraced) operations */
SdfHandle alice_sdf_stairs_union(SdfHandle a, SdfHandle b, float radius, float steps);
SdfHandle alice_sdf_stairs_intersection(SdfHandle a, SdfHandle b, float radius, float steps);
SdfHandle alice_sdf_stairs_subtract(SdfHandle a, SdfHandle b, float radius, float steps);
/** Columns operations */
SdfHandle alice_sdf_columns_union(SdfHandle a, SdfHandle b, float radius, float count);
SdfHandle alice_sdf_columns_intersection(SdfHandle a, SdfHandle b, float radius, float count);
SdfHandle alice_sdf_columns_subtract(SdfHandle a, SdfHandle b, float radius, float count);
/** Advanced operations */
SdfHandle alice_sdf_xor(SdfHandle a, SdfHandle b);
SdfHandle alice_sdf_morph(SdfHandle a, SdfHandle b, float t);
SdfHandle alice_sdf_pipe(SdfHandle a, SdfHandle b, float radius);
SdfHandle alice_sdf_engrave(SdfHandle a, SdfHandle b, float depth);
SdfHandle alice_sdf_groove(SdfHandle a, SdfHandle b, float ra, float rb);
SdfHandle alice_sdf_tongue(SdfHandle a, SdfHandle b, float ra, float rb);
/** Exponential smooth operations */
SdfHandle alice_sdf_exp_smooth_union(SdfHandle a, SdfHandle b, float k);
SdfHandle alice_sdf_exp_smooth_intersection(SdfHandle a, SdfHandle b, float k);
SdfHandle alice_sdf_exp_smooth_subtract(SdfHandle a, SdfHandle b, float k);
/* ============================================================================
 * Transforms
 * ============================================================================ */

/** @brief Translate an SDF */
SdfHandle alice_sdf_translate(SdfHandle node, float x, float y, float z);
/** @brief Rotate an SDF using quaternion (x, y, z, w) */
SdfHandle alice_sdf_rotate(SdfHandle node, float qx, float qy, float qz, float qw);
/** @brief Rotate an SDF using Euler angles (radians) */
SdfHandle alice_sdf_rotate_euler(SdfHandle node, float x, float y, float z);
/** @brief Uniform scale an SDF */
SdfHandle alice_sdf_scale(SdfHandle node, float factor);
/** @brief Non-uniform scale an SDF */
SdfHandle alice_sdf_scale_xyz(SdfHandle node, float x, float y, float z);
/** @brief Non-uniform scale (alias) */
SdfHandle alice_sdf_scale_non_uniform(SdfHandle node, float x, float y, float z);
/* ============================================================================
 * Modifiers
 * ============================================================================ */

/**
 * @brief Apply rounding to an SDF
 * @param radius Rounding radius
 */
SdfHandle alice_sdf_round(SdfHandle node, float radius);
/**
 * @brief Apply onion (shell) modifier
 * @param thickness Shell thickness
 */
SdfHandle alice_sdf_onion(SdfHandle node, float thickness);
/**
 * @brief Apply twist modifier
 * @param strength Twist strength (radians per unit)
 */
SdfHandle alice_sdf_twist(SdfHandle node, float strength);
/**
 * @brief Apply bend modifier
 * @param curvature Bend curvature
 */
SdfHandle alice_sdf_bend(SdfHandle node, float curvature);
/**
 * @brief Apply infinite repetition
 * @param sx,sy,sz Spacing in each axis
 */
SdfHandle alice_sdf_repeat(SdfHandle node, float sx, float sy, float sz);
SdfHandle alice_sdf_repeat_finite(SdfHandle node, uint32_t cx, uint32_t cy, uint32_t cz, float sx, float sy, float sz);
SdfHandle alice_sdf_mirror(SdfHandle node, uint8_t mx, uint8_t my, uint8_t mz);
SdfHandle alice_sdf_elongate(SdfHandle node, float ex, float ey, float ez);
SdfHandle alice_sdf_revolution(SdfHandle node, float offset);
SdfHandle alice_sdf_extrude(SdfHandle node, float half_height);
SdfHandle alice_sdf_noise(SdfHandle node, float amplitude, float frequency, uint32_t seed);
SdfHandle alice_sdf_taper(SdfHandle node, float factor);
SdfHandle alice_sdf_displacement(SdfHandle node, float strength);
SdfHandle alice_sdf_polar_repeat(SdfHandle node, uint32_t count);
SdfHandle alice_sdf_octant_mirror(SdfHandle node);
SdfHandle alice_sdf_sweep_bezier(SdfHandle node, float p0x, float p0y, float p1x, float p1y, float p2x, float p2y);
SdfHandle alice_sdf_shear(SdfHandle node, float xy, float xz, float yz);
SdfHandle alice_sdf_animated(SdfHandle node, float speed, float amplitude);
SdfHandle alice_sdf_with_material(SdfHandle node, uint32_t material_id);