unity-sdf-universe/Assets/Scripts/AliceSdf.cs


        // ============================================================================
        // Boolean Operations
        // ============================================================================

        [DllImport(LibraryName)]
        private static extern IntPtr alice_sdf_union(IntPtr a, IntPtr b);

        [DllImport(LibraryName)]
        private static extern IntPtr alice_sdf_intersection(IntPtr a, IntPtr b);

        [DllImport(LibraryName)]
        private static extern IntPtr alice_sdf_subtract(IntPtr a, IntPtr b);

        [DllImport(LibraryName)]
        private static extern IntPtr alice_sdf_smooth_union(IntPtr a, IntPtr b, float k);

        [DllImport(LibraryName)]
        private static extern IntPtr alice_sdf_smooth_intersection(IntPtr a, IntPtr b, float k);

        [DllImport(LibraryName)]
        private static extern IntPtr alice_sdf_smooth_subtract(IntPtr a, IntPtr b, float k);

        /// <summary>Union of two SDFs (A ∪ B)</summary>
        public static IntPtr Union(IntPtr a, IntPtr b) => alice_sdf_union(a, b);

        /// <summary>Intersection of two SDFs (A ∩ B)</summary>
        public static IntPtr Intersection(IntPtr a, IntPtr b) => alice_sdf_intersection(a, b);

        /// <summary>Subtraction of SDFs (A - B)</summary>
        public static IntPtr Subtract(IntPtr a, IntPtr b) => alice_sdf_subtract(a, b);

        /// <summary>Smooth union of two SDFs</summary>
        public static IntPtr SmoothUnion(IntPtr a, IntPtr b, float k) => alice_sdf_smooth_union(a, b, k);

        /// <summary>Smooth intersection of two SDFs</summary>
        public static IntPtr SmoothIntersection(IntPtr a, IntPtr b, float k) => alice_sdf_smooth_intersection(a, b, k);

        /// <summary>Smooth subtraction of SDFs</summary>
        public static IntPtr SmoothSubtract(IntPtr a, IntPtr b, float k) => alice_sdf_smooth_subtract(a, b, k);

        // --- Chamfer ---
        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_chamfer_union(IntPtr a, IntPtr b, float radius);
        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_chamfer_intersection(IntPtr a, IntPtr b, float radius);
        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_chamfer_subtract(IntPtr a, IntPtr b, float radius);

        public static IntPtr ChamferUnion(IntPtr a, IntPtr b, float radius) => alice_sdf_chamfer_union(a, b, radius);
        public static IntPtr ChamferIntersection(IntPtr a, IntPtr b, float radius) => alice_sdf_chamfer_intersection(a, b, radius);
        public static IntPtr ChamferSubtract(IntPtr a, IntPtr b, float radius) => alice_sdf_chamfer_subtract(a, b, radius);

        // --- Stairs ---
        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_stairs_union(IntPtr a, IntPtr b, float radius, float steps);
        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_stairs_intersection(IntPtr a, IntPtr b, float radius, float steps);
        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_stairs_subtract(IntPtr a, IntPtr b, float radius, float steps);

        public static IntPtr StairsUnion(IntPtr a, IntPtr b, float radius, float steps) => alice_sdf_stairs_union(a, b, radius, steps);
        public static IntPtr StairsIntersection(IntPtr a, IntPtr b, float radius, float steps) => alice_sdf_stairs_intersection(a, b, radius, steps);
        public static IntPtr StairsSubtract(IntPtr a, IntPtr b, float radius, float steps) => alice_sdf_stairs_subtract(a, b, radius, steps);

        // --- Columns ---
        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_columns_union(IntPtr a, IntPtr b, float radius, float count);
        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_columns_intersection(IntPtr a, IntPtr b, float radius, float count);
        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_columns_subtract(IntPtr a, IntPtr b, float radius, float count);

        public static IntPtr ColumnsUnion(IntPtr a, IntPtr b, float radius, float count) => alice_sdf_columns_union(a, b, radius, count);
        public static IntPtr ColumnsIntersection(IntPtr a, IntPtr b, float radius, float count) => alice_sdf_columns_intersection(a, b, radius, count);
        public static IntPtr ColumnsSubtract(IntPtr a, IntPtr b, float radius, float count) => alice_sdf_columns_subtract(a, b, radius, count);

        // --- Advanced ---
        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_xor(IntPtr a, IntPtr b);
        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_morph(IntPtr a, IntPtr b, float t);
        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_pipe(IntPtr a, IntPtr b, float radius);
        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_engrave(IntPtr a, IntPtr b, float depth);
        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_groove(IntPtr a, IntPtr b, float ra, float rb);
        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_tongue(IntPtr a, IntPtr b, float ra, float rb);

        public static IntPtr Xor(IntPtr a, IntPtr b) => alice_sdf_xor(a, b);
        public static IntPtr Morph(IntPtr a, IntPtr b, float t) => alice_sdf_morph(a, b, t);
        public static IntPtr Pipe(IntPtr a, IntPtr b, float radius) => alice_sdf_pipe(a, b, radius);
        public static IntPtr Engrave(IntPtr a, IntPtr b, float depth) => alice_sdf_engrave(a, b, depth);
        public static IntPtr Groove(IntPtr a, IntPtr b, float ra, float rb) => alice_sdf_groove(a, b, ra, rb);
        public static IntPtr Tongue(IntPtr a, IntPtr b, float ra, float rb) => alice_sdf_tongue(a, b, ra, rb);

        // --- Exponential Smooth ---
        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_exp_smooth_union(IntPtr a, IntPtr b, float k);
        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_exp_smooth_intersection(IntPtr a, IntPtr b, float k);
        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_exp_smooth_subtract(IntPtr a, IntPtr b, float k);

        public static IntPtr ExpSmoothUnion(IntPtr a, IntPtr b, float k) => alice_sdf_exp_smooth_union(a, b, k);
        public static IntPtr ExpSmoothIntersection(IntPtr a, IntPtr b, float k) => alice_sdf_exp_smooth_intersection(a, b, k);
        public static IntPtr ExpSmoothSubtract(IntPtr a, IntPtr b, float k) => alice_sdf_exp_smooth_subtract(a, b, k);

        // ============================================================================
        // Transforms
        // ============================================================================

        [DllImport(LibraryName)]
        private static extern IntPtr alice_sdf_translate(IntPtr node, float x, float y, float z);

        [DllImport(LibraryName)]
        private static extern IntPtr alice_sdf_rotate(IntPtr node, float qx, float qy, float qz, float qw);

        [DllImport(LibraryName)]
        private static extern IntPtr alice_sdf_rotate_euler(IntPtr node, float x, float y, float z);

        [DllImport(LibraryName)]
        private static extern IntPtr alice_sdf_scale(IntPtr node, float factor);

        [DllImport(LibraryName)]
        private static extern IntPtr alice_sdf_scale_xyz(IntPtr node, float x, float y, float z);

        /// <summary>Translate an SDF</summary>
        public static IntPtr Translate(IntPtr node, Vector3 offset) =>
            alice_sdf_translate(node, offset.x, offset.y, offset.z);

        /// <summary>Rotate an SDF using quaternion</summary>
        public static IntPtr Rotate(IntPtr node, Quaternion rotation) =>
            alice_sdf_rotate(node, rotation.x, rotation.y, rotation.z, rotation.w);

        /// <summary>Rotate an SDF using Euler angles (radians)</summary>
        public static IntPtr RotateEuler(IntPtr node, Vector3 euler) =>
            alice_sdf_rotate_euler(node, euler.x, euler.y, euler.z);

        /// <summary>Uniform scale an SDF</summary>
        public static IntPtr Scale(IntPtr node, float factor) => alice_sdf_scale(node, factor);

        /// <summary>Non-uniform scale an SDF</summary>
        public static IntPtr Scale(IntPtr node, Vector3 factors) =>
            alice_sdf_scale_xyz(node, factors.x, factors.y, factors.z);

        [DllImport(LibraryName)]
        private static extern IntPtr alice_sdf_scale_non_uniform(IntPtr node, float x, float y, float z);

        /// <summary>Non-uniform scale (explicit)</summary>
        public static IntPtr ScaleNonUniform(IntPtr node, float x, float y, float z) =>
            alice_sdf_scale_non_uniform(node, x, y, z);

        // ============================================================================
        // Modifiers
        // ============================================================================

        [DllImport(LibraryName)]
        private static extern IntPtr alice_sdf_round(IntPtr node, float radius);

        [DllImport(LibraryName)]
        private static extern IntPtr alice_sdf_onion(IntPtr node, float thickness);

        [DllImport(LibraryName)]
        private static extern IntPtr alice_sdf_twist(IntPtr node, float strength);

        [DllImport(LibraryName)]
        private static extern IntPtr alice_sdf_bend(IntPtr node, float curvature);

        [DllImport(LibraryName)]
        private static extern IntPtr alice_sdf_repeat(IntPtr node, float sx, float sy, float sz);

        /// <summary>Apply rounding</summary>
        public static IntPtr Round(IntPtr node, float radius) => alice_sdf_round(node, radius);

        /// <summary>Apply onion (shell) modifier</summary>
        public static IntPtr Onion(IntPtr node, float thickness) => alice_sdf_onion(node, thickness);

        /// <summary>Apply twist modifier</summary>
        public static IntPtr Twist(IntPtr node, float strength) => alice_sdf_twist(node, strength);

        /// <summary>Apply bend modifier</summary>
        public static IntPtr Bend(IntPtr node, float curvature) => alice_sdf_bend(node, curvature);

        /// <summary>Apply infinite repetition</summary>
        public static IntPtr Repeat(IntPtr node, Vector3 spacing) =>
            alice_sdf_repeat(node, spacing.x, spacing.y, spacing.z);

        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_repeat_finite(IntPtr node, uint cx, uint cy, uint cz, float sx, float sy, float sz);
        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_mirror(IntPtr node, byte mx, byte my, byte mz);
        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_elongate(IntPtr node, float ex, float ey, float ez);
        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_revolution(IntPtr node, float offset);
        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_extrude(IntPtr node, float half_height);
        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_noise(IntPtr node, float amplitude, float frequency, uint seed);
        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_taper(IntPtr node, float factor);
        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_displacement(IntPtr node, float strength);
        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_polar_repeat(IntPtr node, uint count);
        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_octant_mirror(IntPtr node);
        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_sweep_bezier(IntPtr node, float p0x, float p0y, float p1x, float p1y, float p2x, float p2y);
        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_shear(IntPtr node, float xy, float xz, float yz);
        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_animated(IntPtr node, float speed, float amplitude);
        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_with_material(IntPtr node, uint material_id);
